[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="PlayerCast" type="RayCast2D" parent="."]
enabled = true
collide_with_areas = true

[node name="FollowCooldown" type="Timer" parent="."]

[node name="PathChange" type="Timer" parent="."]
autostart = true

[node name="InterestCast" type="RayCast2D" parent="."]
enabled = true
collide_with_areas = true

[connection signal="timeout" from="PathChange" to="." method="_on_PathChange_timeout"]
